Fix overflow for sidebar

--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -3,5 +3,4 @@
   padding: 0 3rem 8rem 3rem;
   position: relative;
   width: 100%;
-  z-index: 0;
 }
